@@ -98,10 +98,7 @@ struct Buffer_Modified_Set{
 
 struct Fade_Range{
     Fade_Range *next;
-    union{
-        Buffer_ID buffer_id;
-        View_ID view_id;
-    };
+    Buffer_ID buffer_id;
     f32 t;
     f32 full_t;
     Range_i64 range;
