@@ -18,7 +18,7 @@ defcolor_comment_pop = {0xFF00C030, 0xFFF00000};
 defcolor_keyword = 0xFF002255;
 defcolor_str_constant = 0xFFE820E0;
 defcolor_char_constant = defcolor_str_constant;
-defcolor_int_constant = 0xFF20E8E0;
+defcolor_int_constant = 0xFF109810;
 defcolor_float_constant = defcolor_int_constant;
 defcolor_bool_constant = defcolor_int_constant;
 defcolor_include = 0xFFF010F0;
