@@ -12,6 +12,8 @@
  + Fix: no crash when a project file .cmd is not the right type
  + Fix: windows layer now generates layout independent key stroke events
  + Fix: notepad like mode scrolling does not snap mark to cursor
+ + Fix: special case colors from the theme override general case colors
+ + Fix: Paste fade range is updated with buffer edits
 
 4.1.4
  + MAJOR: The clipboard history is now a fully custom layer implemented system. Users maintaining a customization layer should try to update their call sites to the old clipboard API. #define FCODER_TRANSITION_TO 4001004 to disable the transitional function wrappers when you are ready to make the transition.
